# Pong-Workshop

./: .gitignore  README.md
Pong_PCB/: Draftman_PCB.PCBDwf  LED Array.SchDoc  PCB.PcbDoc  PCB_Project_template.PrjPcbStructure  Panel_definition.PCBDwf  Pong_PCB.OutJob  Pong_PCB.PrjPcb  Pong_PCB.PrjPcbStructure  Top level.SchDoc  outjob.OutJob  stackup.PCBDwf
Pong_PCB/__Previews/: LED Array.SchDocPreview  Top level.SchDocPreview
Pong_Zephyr/: .gitignore  README.md
Pong_Zephyr/.west/: config
Pong_Zephyr/zephyr_pong/: CMakeLists.txt  west.yml
Pong_Zephyr/zephyr_pong/app/: CMakeLists.txt  prj.conf
Pong_Zephyr/zephyr_pong/app/boards/: nucleo_l432kc.overlay
Pong_Zephyr/zephyr_pong/app/src/: main.c  pong_game.c  pong_game.h
Pong_Zephyr/zephyr_pong/app_example/: prj.conf
Pong_Zephyr/zephyr_pong/app_example/boards/: nucleo_f446re.overlay  nucleo_g031k8.overlay  nucleo_l432kc.overlay  nucleo_l476rg.overlay
Pong_Zephyr/zephyr_pong/app_example/src/: main.c  rn_pong_game_example.c  rn_pong_game_example.h
Pong_Zephyr/zephyr_pong/drivers/: CMakeLists.txt  Kconfig
Pong_Zephyr/zephyr_pong/drivers/matrix/: CMakeLists.txt  Kconfig  rn_LED_matrix.c
Pong_Zephyr/zephyr_pong/dts/bindings/: zephyr,railnova-led-matrix.yaml
Pong_Zephyr/zephyr_pong/include/: rn_LED_matrix.h
